1. 修改 README.md
2. 实现 Web 浏览器的扫描识别功能

3. 改为 TypeScript 支持

4. 修正 index.html

5. 引入 ant-design-vue

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     },
     "dependencies": {
         "@zxing/library": "^0.17.1",
+        "ant-design-vue": "^2.0.0-beta.10",
         "vue": "^3.0.0-rc.1"
     },
     "devDependencies": {
-        "vite": "^1.0.0-rc.1",
-        "@vue/compiler-sfc": "^3.0.0-rc.1"
+        "@vue/compiler-sfc": "^3.0.0-rc.1",
+        "vite": "^1.0.0-rc.1"
     }
 }
