--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.0.0-rc.1",
+        "less": "^3.12.2",
+        "less-loader": "^7.0.2",
         "vite": "^1.0.0-rc.1"
     }
 }
